@@ -288,6 +288,11 @@ https://github.com/networkupstools/nut/milestone/11
    * fixed `netvision-mib`: sync `netvision_output_info` with currently
      available `SOCOMECUPS-MIB.txt`. [#2803]
 
+ - mge-utalk driver will no longer set non-standard status values `COMMFAULT`
+   and `ALARM` (for a specific status bit); instead, it will set modern
+   `ups.alarm` with values `COMMFAULT` and/or `DEVICEALARM` (and raise
+   an `ALARM` in `ups.status` for either, as standard alarms go). [#2708]
+
  - Introduced a new driver concept for interaction with OS-reported hardware
    monitoring readings. Currently instantiated as `hwmon_ina219` specifically
    made for Texas Instruments INA219 chip as exposed in the Linux "hwmon"
